projects/vb6parse/snapshots/parsers/cst/declarations/variables/private_withevents_custom_class.snap
---
source: projects/vb6parse/tests/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: WithEventsKeyword
          text: WithEvents
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_worker
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: WorkerClass
        - kind: Newline
          text: "\n"
